<resources>

    <string name="app_name">ILOGIC</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ILOGIC</string>
    <string name="MainActivity">MainActivity</string>
    <string name="run">RUN</string>
    <string name="viewvariable">View Variables</string>
    <string name="read_sensors">Read Sensors</string>
    
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to ILOGIC</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving ILOGIC.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for ILOGIC...</string>
    <string name="select_device">select a ILOGIC to connect</string>
    <string name="none_paired">No ILOGIC devices have been paired</string>
    <string name="none_found">No ILOGIC device found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for ILOGIC</string>

    <!-- Options Menu -->
    <string name="connect">Connect to ILOGIC</string>
    <string name="discoverable">Make discoverable</string>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="brown">#c08869</color>
    <string name="toolbar">T\no\no\nl\nb\na\nr</string>
    <string-array name="arduinopins">
        <item >00</item>
        <item >01</item>
        <item >02</item>
        <item >03</item>
        <item >04</item>
        <item >05</item>
        <item >06</item>
        <item >07</item>
        <item >08</item>
        <item >09</item>
        <item >10</item>
        <item >11</item>
        <item >12</item>
        <item >13</item>
    </string-array>
    <string-array name="pinstatus">
        <item >Low</item>
        <item >High</item>
    </string-array>
    <string-array name="symbols">
        <item >==</item>
        <item >&lt;</item>
        <item >&gt;</item>
        <item >!=</item>
        <item >&lt;=</item>
        <item >&gt;=</item>
    </string-array>
    <string-array name="severity">
        <item >Message</item>
        <item >Warning</item>
        <item >Error</item>
    </string-array>
</resources>